<!-- Copyright 2017 Google Inc.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License. -->

<resources>
    <!-- All comments are notes to translators. -->
    <string name="app_name">LocaleText</string>

    <!-- The Help option in the options menu, no more than 30 chars. -->
    <string name="action_help">Help</string>

    <!-- The description includes a parenthetical expression.  -->

    <!-- The product name includes "Package" to define a pack.  -->
    <string name="nougat">Nougat Candy Package</string>

    <!-- Do not translate.  -->

    <!-- Support Department should be capitalized.  -->
    <string name="help_text">If you need help, contact our Support Department.</string>

    <!-- Do not translate.  -->
    <string name="dial_log_message">Can\'t resolve app for ACTION_DIAL Intent.</string>
    <string name="description">"Nougat is a family of confections made with sugar or honey, roasted nuts (almonds, walnuts, pistachios, hazelnuts, and macadamia nuts are common), whipped egg whites, and sometimes chopped candied fruit. It is used in a variety of candy bars and chocolates. "</string>
    <string name="support_phone" translatable="false">+14155551212</string>
    <string name="expiration_label">Expiration Date:</string>
    <string name="date_sample">17/02/2022</string>
    <string name="quantity_label">Quantity</string>
    <string name="price_per_package">Price per package</string>
    <string name="value_sample">00.00</string>
    <string name="total">Total</string>
</resources>
