<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.android.localetext.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/heading"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/standard_margin"
        android:layout_marginTop="@dimen/standard_margin"
        android:text="@string/nougat"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toRightOf="@+id/product_image"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/product_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/nougat"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/standard_margin"
        android:layout_marginLeft="@dimen/standard_margin"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@id/heading"
        app:layout_constraintLeft_toRightOf="@id/product_image"
        android:layout_marginLeft="@dimen/standard_margin"
        android:layout_marginRight="@dimen/standard_margin"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0" />

    <TextView
        android:id="@+id/expirationLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/standard_margin"
        android:layout_marginLeft="@dimen/standard_margin"
        android:layout_marginTop="40dp"
        android:text="@string/expiration_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description" />

    <TextView
        android:id="@+id/expiration"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/standard_margin"
        android:text="@string/date_sample"
        app:layout_constraintBottom_toBottomOf="@+id/expirationLabel"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toRightOf="@id/product_image"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@+id/expirationLabel"
        app:layout_constraintTop_toTopOf="@+id/expirationLabel"
        android:layout_marginEnd="@dimen/standard_margin" />

    <TextView
        android:id="@+id/quantityLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/standard_margin"
        android:layout_marginLeft="@dimen/standard_margin"
        android:layout_marginTop="20dp"
        android:text="@string/quantity_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/expirationLabel" />

    <EditText
        android:id="@+id/quantity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:imeOptions="actionDone"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="@+id/quantityLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/quantityLabel"
        app:layout_constraintTop_toTopOf="@+id/quantityLabel" />

    <TextView
        android:id="@+id/priceLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/price_per_package"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quantityLabel" />

    <TextView
        android:id="@+id/price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:text="@string/value_sample"
        app:layout_constraintBottom_toBottomOf="@+id/priceLabel"
        app:layout_constraintStart_toEndOf="@+id/priceLabel"
        app:layout_constraintTop_toTopOf="@+id/priceLabel" />

    <TextView
        android:id="@+id/totalLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/total"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/priceLabel" />

    <TextView
        android:id="@+id/total"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:text="@string/value_sample"
        app:layout_constraintBottom_toBottomOf="@+id/totalLabel"
        app:layout_constraintStart_toEndOf="@+id/totalLabel"
        app:layout_constraintTop_toTopOf="@+id/totalLabel" />



</android.support.constraint.ConstraintLayout>
